# pyCNLM

./: 0_quick_start.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
examples/: 00_overview.ipynb  01_langevin_sat_maxsat.ipynb  02_hobo_reducers.ipynb  03_adaptcnlm_qubit_reduction.ipynb  README.md
examples/data/: sample_3sat.cnf  sample_maxsat.wcnf  sample_symmetric.cnf
pycnlm/: __init__.py  _version.py  cli.py
pycnlm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pycnlm/core/AdaptCNLM/: AdaptCNLM.py
pycnlm/core/HOBOReducers/: __init__.py  utils.py
pycnlm/core/HOBOReducers/arb/: fgbz_positive.py  pairwise_covers.py
pycnlm/core/HOBOReducers/ferq/: __init__.py  ferq_method.py  ferq_optimizer.py  precompute_coefficients.py
pycnlm/core/HOBOReducers/ferq/data/: ferq_coeffs_d43.feather  ferq_coeffs_d43_metadata.json
pycnlm/core/HOBOReducers/ntr/: ntr_abcg.py  ntr_gbp.py
pycnlm/core/HOBOReducers/ptr/: ptr_bg.py  ptr_ishikawa.py  ptr_kz.py
pycnlm/core/LangevinCNLM/: README.md  __init__.py
pycnlm/core/LangevinCNLM/benchmark/: README.md  driver.py
pycnlm/core/LangevinCNLM/benchmark/adapters/: adapter_cnlm_variants.py  adapter_neurosat.py  adapter_neurosat_mini.py  adapter_random_restart.py  adapter_satnet.py
pycnlm/core/LangevinCNLM/cnlm_langevin/: __init__.py
pycnlm/core/LangevinCNLM/cnlm_langevin/baselines/: neurosat_mini.py
pycnlm/core/LangevinCNLM/cnlm_langevin/core/: analysis.py  dynamics.py  enhancements.py
pycnlm/core/LangevinCNLM/cnlm_langevin/tools/: tune_cnlm.py
pycnlm/core/LangevinCNLM/examples/: demo.ipynb
pycnlm/scripts/: run_AdaptCNLM.py
pycnlm/scripts/run_HOBOReducers/: run_benchmark_kSAT.py  run_benchmark_maxkSAT.py  run_benchmark_pspin.py  run_benchmark_qc_hamiltonian.py  run_benchmark_random_ksat.py
pycnlm/scripts/run_LangevinCNLM/: benchmark_MaxSAT.py  benchmark_SAT.py  run_MaxSAT.py  run_SAT.py
